--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<!DOCTYPE html>\n<html lang="en">\n<head>\n    <meta charset="UTF-8">\n    <meta name="viewport" content="width=device-width, initial-scale=1.0">\n    <title>Whack-a-Mole Game</title>\n    <style>\n        body {\n            font-family: Arial, sans-serif;\n            text-align: center;\n        }\n        #game-grid {\n            display: grid;\n            grid-template-columns: repeat(3, 100px);\n            grid-template-rows: repeat(3, 100px);\n            gap: 10px;\n            margin: 0 auto;\n        }\n        .mole {\n            background-color: brown;\n            width: 100px;\n            height: 100px;\n            border-radius: 5px;\n        }\n        .hole {\n            background-color: lightgray;\n            width: 100px;\n            height: 100px;\n            border-radius: 5px;\n        }\n        #score, #timer {\n            font-size: 24px;\n            margin: 10px;\n        }\n    </style>\n</head>\n<body>\n    <h1>Whack-a-Mole Game</h1>\n    <div id="score">Score: 0</div>\n    <div id="timer">Time: 30</div>\n    <div id="game-grid">\n        <div class="hole"></div>\n        <div class="hole"></div>\n        <div class="hole"></div>\n        <div class="hole"></div>\n        <div class="hole"></div>\n        <div class="hole"></div>\n        <div class="hole"></div>\n        <div class="hole"></div>\n        <div class="hole"></div>\n    </div>\n    <button onclick="startGame()">Start Game</button>\n    <button onclick="resetGame()">Reset Game</button>\n    <script>\n        // JavaScript functions for the game here\n        function startGame() {\n            // Game starting logic\n        }\n\n        function resetGame() {\n            // Game reset logic\n        }\n    </script>\n</body>\n</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Whack-a-Mole Game</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
+</head>
+<body>
+    <h1>Whack-a-Mole Game</h1>
+    <div id="game">
+        <div class="mole" id="mole1"></div>
+        <div class="mole" id="mole2"></div>
+        <div class="mole" id="mole3"></div>
+        <div class="mole" id="mole4"></div>
+        <div class="mole" id="mole5"></div>
+        <div class="mole" id="mole6"></div>
+    </div>
+    <button id="start-button">Start Game</button>
+    <div id="score">Score: 0</div>
+</body>
+</html>
