--- a/index.html
+++ b/index.html
@@ -19,5 +19,57 @@
     </div>
 
     <script src="script.js"></script>
+    <script>
+    // const holes = document.querySelectorAll('.hole');
+const scoreBoard = document.querySelector('#score');
+const moles = document.querySelectorAll('.mole');
+let lastHole;
+let score = 0;
+let timeUp = false;
+
+// 1. 隨機取得一個洞
+function randomHole(holes) {
+    const idx = Math.floor(Math.random() * holes.length);
+    const hole = holes[idx];
+    if (hole === lastHole) return randomHole(holes); // 避免連續出現在同一個洞
+    lastHole = hole;
+    return hole;
+}
+
+// 2. 讓地鼠冒出來
+function peep() {
+    const time = Math.random() * 700 + 300; // 隨機出現 0.3~1 秒
+    const hole = randomHole(holes);
+    const mole = hole.querySelector('.mole');
+    
+    mole.classList.add('up');
+
+    setTimeout(() => {
+        mole.classList.remove('up');
+        if (!timeUp) peep(); // 如果遊戲沒結束，繼續下一隻
+    }, time);
+}
+
+// 3. 開始遊戲
+function startGame() {
+    score = 0;
+    scoreBoard.textContent = 0;
+    timeUp = false;
+    peep();
+    setTimeout(() => timeUp = true, 10000); // 遊戲時長 10 秒
+}
+
+// 4. 點擊（打）地鼠
+moles.forEach(mole => {
+    mole.addEventListener('click', function() {
+        if(!this.classList.contains('up')) return; // 地鼠沒上來點了不算分
+        score++;
+        this.classList.remove('up'); // 打中後地鼠立刻縮回去
+        scoreBoard.textContent = score;
+    });
+});
+
+    const holes = document.querySelectorAll('.hole');
+</script>
 </body>
 </html>
